--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
+    <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
     <title>Rooty Hill Veterinary Surgery</title>
 </head>
 <body>
@@ -21,7 +22,7 @@
     <main>
         <section id="home">
             <h2>Welcome to Rooty Hill Veterinary Surgery</h2>
-            <p>Your pet's health is our priority.</p>
+            <p>For All Your Animal's Care including General Surgery, Vaccinations, De-Sexing, Microchips, In-House X-ray, Pathology, Dentistry. Over 25 years experience.</p>
         </section>
         
         <section id="services">
@@ -36,7 +37,9 @@
 
         <section id="contact">
             <h2>Contact Us</h2>
-            <p>Email: info@rootyhillvet.com.au</p>
+            <p>Phone Number: (02) 9625 0499</p>
+            <p>Email: rootyhillvetclinic@bigpond.com</p>
+            <p>Location: 26 Rooty Hill Rd Rooty Hill NSW 2766</p>
         </section>
 
         <section id="gallery">
