nav links & cat header added and positioned

--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
     <title>Rooty Hill Veterinary Surgery</title>
 </head>
 <body>
-    <header>
-        <h1>Rooty Hill Veterinary Surgery</h1>
+    <header class="header">
+        <img src="./assets/mainHeader.PNG" alt="Header Image" class="header-image">
         <nav>
-            <ul>
+            <ul class="nav-links">
                 <li><a href="#home">Home</a></li>
                 <li><a href="#services">Services</a></li>
                 <li><a href="#contact">Contact Us</a></li>
@@ -19,6 +19,8 @@
             </ul>
         </nav>
     </header>
+    <div class="header-cat-image">
+    </div>
     <main>
         <section id="home">
             <h2>Welcome to Rooty Hill Veterinary Surgery</h2>
