--- a/index.html
+++ b/index.html
@@ -23,12 +23,15 @@
     </div>
     <main>
         <section id="home">
-            <h2>Welcome to Rooty Hill Veterinary Surgery</h2>
-            <p>For All Your Animal's Care including General Surgery, Vaccinations, De-Sexing, Microchips, In-House X-ray, Pathology, Dentistry. Over 25 years experience.</p>
+            <h2 id="home-h2">Welcome to Rooty Hill Veterinary Surgery</h2>
+            <p id="home-p">For All Your Animal's Care including General Surgery, Vaccinations, De-Sexing, Microchips, In-House X-ray, Pathology, Dentistry. Over 25 years experience.</p>
         </section>
         
         <section id="services">
             <h2>Our Services</h2>
+            <p>From routine check-ups and vaccinations to advanced diagnostics and surgery, our dedicated team is passionate about providing exceptional care for all your pet’s needs.
+            We understand the unique bond between pets and their families, and we strive to create a welcoming and stress-free environment for both you and your pet.
+            </p>
             <ul>
                 <li>General Check-ups</li>
                 <li>Vaccinations</li>
@@ -42,6 +45,7 @@
             <p>Phone Number: (02) 9625 0499</p>
             <p>Email: rootyhillvetclinic@bigpond.com</p>
             <p>Location: 26 Rooty Hill Rd Rooty Hill NSW 2766</p>
+            <form action="submit"></form>
         </section>
 
         <section id="gallery">
