--- a/index.html
+++ b/index.html
@@ -28,16 +28,12 @@
         </section>
         
         <section id="services">
-            <h2>Our Services</h2>
-            <p>From routine check-ups and vaccinations to advanced diagnostics and surgery, our dedicated team is passionate about providing exceptional care for all your pet’s needs.
+            <div class="container">
+            <h2 id="services-h2">Our Services</h2>
+            <p id="services-p">From routine check-ups and vaccinations to advanced diagnostics and surgery, our dedicated team is passionate about providing exceptional care for all your pet’s needs.
             We understand the unique bond between pets and their families, and we strive to create a welcoming and stress-free environment for both you and your pet.
             </p>
-            <ul>
-                <li>General Check-ups</li>
-                <li>Vaccinations</li>
-                <li>Surgery</li>
-                <li>Emergency Care</li>
-            </ul>
+            </div>
         </section>
 
         <section id="contact">
