--- a/index.html
+++ b/index.html
@@ -36,17 +36,42 @@
             </div>
         </section>
 
-        <section id="contact">
-            <h2>Contact Us</h2>
-            <p>Phone Number: (02) 9625 0499</p>
-            <p>Email: rootyhillvetclinic@bigpond.com</p>
-            <p>Location: 26 Rooty Hill Rd Rooty Hill NSW 2766</p>
-            <form action="submit"></form>
-        </section>
-
         <section id="gallery">
+            <div class="container">
             <h2>Gallery</h2>
             <p>Check out our furry patients!</p>
+            </div>
+        </section>
+
+        <section id="contact">
+            <div class="contact-main">
+            <div class="contact-container">
+            <h2>Contact Us</h2>
+            <ol id="opening-hours"> <strong>Opening Hours</strong>
+                <li> <strong>Monday - Friday</strong></li>
+                <li>9am - 12pm</li>
+                <li>3pm - 6pm</li>
+                <li><strong>Saturday - Sunday</strong></li>
+                <li>Closed</li>
+            </ol>
+            <p> <strong>Phone Number:</strong> (02) 9625 0499</p>
+            <p> <strong>Email:</strong> rootyhillvetclinic@bigpond.com</p>
+            <p> <strong>Location:</strong> 26 Rooty Hill Rd Rooty Hill NSW 2766</p>
+            </div>
+            <div class="form-container">
+            <form action="action_page.php">
+
+             <label for="fname"> <strong>Name:</strong> </label>
+                <input type="text" id="fname" name="firstname" placeholder="Your name..">
+
+            <label for="subject"> <strong>Subject:</strong> </label>
+                <textarea id="subject" name="subject" placeholder="Write something.." style="height:200px"></textarea>
+
+            <input type="submit" value="Submit">
+
+             </form>
+        </div>
+        </div>
         </section>
     </main>
     
