--- a/index.html
+++ b/index.html
@@ -36,12 +36,57 @@
             </div>
         </section>
 
-        <section id="gallery">
-            <div class="container">
-            <h2>Gallery</h2>
-            <p>Check out our furry patients!</p>
-            </div>
-        </section>
+        <section class="gallery-section">
+  <div class="container">
+    <h2>Gallery</h2>
+    <p>Check out our furry patients!</p>
+  </div>
+
+  <div class="gallery-wrapper">
+    <div class="gallery">
+      <a target="_blank" href="./assets/cat.jpg">
+        <img src="./assets/cat.jpg" alt="Cat">
+      </a>
+      <div class="desc">Always time for a cat nap in the office</div>
+    </div>
+
+    <div class="gallery">
+      <a target="_blank" href="./assets/dog.jpg">
+        <img src="./assets/dog.jpg" alt="Dog">
+      </a>
+      <div class="desc">Safe to say we have the happiest pups around!</div>
+    </div>
+
+    <div class="gallery">
+      <a target="_blank" href="./assets/kitten.jpg">
+        <img src="./assets/kitten.jpg" alt="Kitten">
+      </a>
+      <div class="desc">Lunch time!</div>
+    </div>
+
+    <div class="gallery">
+      <a target="_blank" href="./assets/halloweenPup.jpg">
+        <img src="./assets/halloweenPup.jpg" alt="Halloween Pup">
+      </a>
+      <div class="desc">She was a fairy princess!</div>
+    </div>
+
+    <div class="gallery">
+      <a target="_blank" href="./assets/fishBowl.jpg">
+        <img src="./assets/fishBowl.jpg" alt="Fish Bowl">
+      </a>
+      <div class="desc">Teaching is part of our commitment to pet care.</div>
+    </div>
+
+    <div class="gallery">
+      <a target="_blank" href="./assets/chameleon.jpg">
+        <img src="./assets/chameleon.jpg" alt="Chameleon">
+      </a>
+      <div class="desc">We get visitors of all shapes and sizes!</div>
+    </div>
+  </div>
+</section>
+
 
         <section id="contact">
             <div class="contact-main">
